Optimize CF cache policy

--- a/template.yaml
+++ b/template.yaml
@@ -119,6 +119,24 @@ Resources:
         SigningBehavior: always
         SigningProtocol: sigv4
 
+  CloudFrontCachePolicy:
+    Type: AWS::CloudFront::CachePolicy
+    Properties: 
+      CachePolicyConfig: 
+        DefaultTTL: 300
+        MaxTTL: 600
+        MinTTL: 60
+        Name: rss-filtered-feed-gen
+        ParametersInCacheKeyAndForwardedToOrigin: 
+          CookiesConfig: 
+            CookieBehavior: none
+          EnableAcceptEncodingBrotli: false
+          EnableAcceptEncodingGzip: false
+          HeadersConfig: 
+            HeaderBehavior: none
+          QueryStringsConfig: 
+            QueryStringBehavior: none
+
   CloudFrontDistribution:
     Type: AWS::CloudFront::Distribution
     Properties:
@@ -141,7 +159,7 @@ Resources:
             - HEAD
             - OPTIONS
           TargetOriginId: !Sub "${AWS::StackName}-s3-origin"
-          CachePolicyId: 658327ea-f89d-4fab-a63d-7e88639e58f6 # CachingOptimized
+          CachePolicyId: !Ref CloudFrontCachePolicy
           OriginRequestPolicyId: 88a5eaf4-2fd4-4709-b370-b4c650ea3fcf # CORS-S3Origin
           ViewerProtocolPolicy: redirect-to-https
         PriceClass: PriceClass_All
